JS 3rd commit, read Auberon's suggestion to backtrack prior language server module, unit tests running now, discovered issue with Set.of() - doesn't allow creation of set with a null element, changed unit test arrange section, first two methods all tests passing currently